--- a/JAVA_Basic/JSD1603_SE/enumDemo/枚举.md
+++ b/JAVA_Basic/JSD1603_SE/enumDemo/枚举.md
@@ -2,7 +2,7 @@
 
 #什么是枚举？
 >我们学习过单例模式，即一个类只有一个实例。而枚举其实就是多例，一个类有多个实例，但实例的个数不是无穷的，是有限个数的。例如word文档的对齐方式有几种：左对齐、居中对齐、右对齐。开车的方向有几种：前、后、左、右！
-我们称呼枚举类中实例为枚举项！一般一个枚举类的枚举项的个数不应该太多，如果一个枚举类有30个枚举项就太多了！
+我们称呼枚举类中实例为 枚举项！一般一个枚举类的枚举项的个数不应该太多，如果一个枚举类有30个枚举项就太多了！
 ##定义枚举类型  
 定义枚举类型需要使用enum关键字，例如：  
 
@@ -102,6 +102,6 @@ Direction类中还有一个实例域：String name，我们在构造器中为其
     }  
 
 ##每个枚举类都有两个特殊方法  
-每个枚举类都有两个不用声明就可以调用的static方法，而且这两个方法不是父类中的方法。这又是枚举类特殊的地方，下面是Direction类的特殊方法。  
+每个枚举类都有两个不用声明就可以调用的静态方法，而且这两个方法不是父类中的方法。这又是枚举类特殊的地方，下面是Direction类的特殊方法。  
 static Direction[] values()：返回本类所有枚举常量；  
 static Direction valueOf(String name)：通过枚举常量的名字返回Direction常量，注意，这个方法与Enum类中的valueOf()方法的参数个数不同。    
